connecting to database

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-DB1_URI=mongodb+srv://<username>:<password>@cluster0.mongodb.net/usernameDB?retryWrites=true&w=majority
-DB2_URI=mongodb+srv://<username>:<password>@cluster0.mongodb.net/passwordDB?retryWrites=true&w=majority
+DB1_URI=mongodb+srv://<username>:Ishmael@2004@cluster0.mongodb.net/usernameDB?retryWrites=true&w=majority
+DB2_URI=mongodb+srv://<username>:Ishmael@2004@cluster0.mongodb.net/passwordDB?retryWrites=true&w=majority
+VITE_API_KEY='8029f2bb09msha2b39da22aa0d64p1a9894jsn1f655c05d860'
