--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,38 @@
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment files
 .env
+.env.local
+.env.*.local
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Operating System Files
+.DS_Store
+Thumbs.db
+
+# IDE/Editor Files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Build Artifacts
+dist/
+build/
+
+# Coverage Reports
+coverage/
+
+# Temporary Files
+*.tmp
+*.temp
